--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-simple-autocomplete": "^1.0.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "sass": "^1.0.0-beta.2",
